--- a/comepost/templates/base.html
+++ b/comepost/templates/base.html
@@ -22,10 +22,12 @@
             
 
             <div class="navbar-links">
-
-                <a href="/" class="navbar-link">Homepage</a>
-                <a href="/individuals" class="navbar-link">Individuals</a>
-                <a href="/market" class="navbar-link">Market</a>
+                <div class="styled-links">
+                    <a href="/" class="navbar-link">Homepage</a>
+                    <a href="/individuals" class="navbar-link">Individuals</a>
+                    <a href="/market" class="navbar-link">Market</a>
+                </div>
+                
                 {% if not current_user.is_authenticated %}
                 <a href="/signup" class="navbar-link">Signup</a>
                 <a href="login" class="navbar-link link-button">Login</a>
