Fix: Linux image externsion
Now this should work both on linux and windows

--- a/comepost/templates/individuals.html
+++ b/comepost/templates/individuals.html
@@ -92,7 +92,7 @@ when decomposing</li><br>
         </div>
         
         <div class="col-8">
-         <img onclick="alert('This function is not available in demo version.')" src="{{ url_for('static', filename='/img/mapa.jpg') }}" class="mapa" >
+         <img onclick="alert('This function is not available in demo version.')" src="{{ url_for('static', filename='/img/mapa.JPG') }}" class="mapa" >
         </div>
         
     </div>
