--- a/comepost/templates/market.html
+++ b/comepost/templates/market.html
@@ -56,7 +56,7 @@
                     
                 </div>
                 <div class="col-6">
-                    <button class="popup-submit-offer">Complete trade</button>
+                    <button onclick="alert('Thanks for using the demo version!')" class="popup-submit-offer">Complete trade</button>
                 </div>
 
             </div>
